--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -1,22 +1,27 @@
-<genre-list> daniel </genre-list>
-<bread-crumb></bread-crumb>
+
 
 <main ng-controller="AlbumsGenreController" >	
-	
-	<div id="center-albums">
-		<div class="genre-amount">
-			<p>{{genreName }} ({{genreLength + " items"}})</p>
-		</div>
-		<div class="genre-albums" ng-repeat="album in albums track by $index">
-		    <a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
-			<div class="info-manage-album">
-			    <p class="head-name">{{album.album_artist}} - {{album.album_name}}</p>
-				<p class="album-descriptoin">{{album.album_description | limitTo:120:0}}...</p>
-				<p class="album-price">{{album.album_price | currency:"$"}}</p>
-		    	<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-		    	<img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(img)">
-		    	<p class="addtowishlist" ng-click="addtowishlist($index)">Add to Wishlist</p>
+	<div id="wrapper">
+		<genre-list> daniel </genre-list>
+	    <bread-crumb></bread-crumb>
+		<div id="center-albums">
+			<div class="genre-amount">
+				<p>{{genreName }} ({{genreLength + " items"}})</p>
+			</div>
+			<div class="genre-albums" ng-repeat="album in albums track by $index">
+			    <a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
+				<div class="info-manage-album">
+				    <p class="head-name">{{album.album_artist}} - {{album.album_name}}</p>
+					<p class="album-descriptoin">{{album.album_description | limitTo:100:0}}...</p>
+					<p class="album-price">{{album.album_price | currency:"$"}}</p>
+			    	<div class="album-manage-icon">
+			    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
+			    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(img)">
+			    	</div>
+		
+			    	<p class="addtowishlist" ng-click="addtowishlist($index)">Add to Wishlist</p>
+			    </div>
 		    </div>
-	    </div>
+		</div>
 	</div>
 </main>
