--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="checkout.css">
 </head>
 <body ng-controller="mainController">
-
 	<header>
 		<nav>
 			<ul>
@@ -16,14 +15,14 @@
 				<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 				<a href="#myWishlist"><li>My Wishlist</li></a>
 				<a href="check-out-1.html"><li>Checkout</li></a>
-				<a href="#login" ng-hide="" ><li>Log In</li></a>
+				<a href="#login" ng-hide=""><li>Log In</li></a>
 			</ul>	
 		</nav>
 		<div id="nav-header">
 			<a href="#home"><img class="logo" src="Images/logo.png" ></a>
-			<div ng-controller="searchController">
+		<!-- 	<div ng-controller="searchController">
                 <live-search id="search1" type="text" live-search-callback="mySearchCallback" ng-model="mySearch" class="form-control"></live-search>
-            </div>
+            </div> -->
 			<div id="find-album">
 				<input type="text" class="search" />
 				<img ng-src="Images/search.png" alt="">
