chackout page+ css

--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -40,9 +40,7 @@
 				</div>
 			</div>
 		</div>
-	
 	</div>
-   <!--  <footer ng-class="{expression}"></footer> -->
 </main>
-
-
+	<!-- <div class="blank"></div>
+    <footer ng-class="{expression}"></footer> -->
