--- a/index1.html
+++ b/index1.html
@@ -11,15 +11,15 @@
 	<header>
 		<nav>
 			<ul>
-				<a href="#home"><li>Home</li></a>
-				<a href="#myAcoount" ng-show=""><li>My Account</li></a>
-				<a href="#myWishlist"><li>My Wishlist</li></a>
-				<a href="check-out-1.html"><li>Checkout</li></a>
-				<a href="#login" ng-hide=""><li>Log In</li></a>
+				<a ng-href="#home"><li>Home</li></a>
+				<a ng-href="#myAcoount" ng-show=""><li>My Account</li></a>
+				<a ng-href="#myWishlist"><li>My Wishlist</li></a>
+				<a ng-href="#check-out"><li>Checkout</li></a>
+				<a ng-href="#login" ng-hide=""><li>Log In</li></a>
 			</ul>	
 		</nav>
 		<div id="nav-header">
-			<a href="#home"><img class="logo" src="Images/logo.png" ></a>
+			<a ng-href="#home"><img class="logo" ng-src="Images/logo.png" ></a>
 		<!-- 	<div ng-controller="searchController">
                 <live-search id="search1" type="text" live-search-callback="mySearchCallback" ng-model="mySearch" class="form-control"></live-search>
             </div> -->
