--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -13,7 +13,7 @@
 				<p class="album-price">{{album.album_price | currency:"$"}}</p>
 				<div class="album-manage-icon">
 		    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(img)">
+		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart($index)">
 		    	</div>
 		    </div>
 		</div>
