--- a/app/Breadcrumb/_bread-crumb.html
+++ b/app/Breadcrumb/_bread-crumb.html
@@ -1,2 +1,8 @@
+<ol class="ab-nav breadcrumb" ng-show="true">
+    <li ng-repeat="breadcrumb in breadcrumbs.get() track by breadcrumb.path" ng-class="{ active: $last }">
+        <a ng-if="!$last" ng-href="#{{ breadcrumb.path }}" ng-bind="breadcrumb.label" class="margin-right-xs"></a>
+        <span ng-if="$last" ng-bind="breadcrumb.label"></span>
+    </li>
+</ol>
 
-<div id="bread-crumb" ng-show="true"><p>Still > Doesn't > Work</p></div>
+<!--<div id="bread-crumb" ng-show="true"><p><a href="#home">Home</a> > Doesn't > Work</p></div>-->
