--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -24,6 +24,11 @@
 			<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name}}</p>
+		    	<p class="album-price">{{album.album_price | currency:"$"}}</p>
+				<div class="album-manage-icon">
+		    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
+		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart($index)">
+		    	</div>
 		    </div>
 		</div>
 	</div>
@@ -35,6 +40,11 @@
 				<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
 		        <div class="info-head">
 				    <p class="head-name">{{album.album_name}}</p>
+		            <p class="album-price">{{album.album_price | currency:"$"}}</p>
+					<div class="album-manage-icon">
+			    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
+			    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart($index)">
+			    	</div>
 		        </div>
 		    </div>
         </div>
