--- a/app/Cart/_cart.html
+++ b/app/Cart/_cart.html
@@ -5,18 +5,18 @@
 		<p>Cart Subtotal: {{  }} <button>Checkout</button></p>
 
 		<div>
-			<div ng-repeat="product in cart">
-				<img ng-src="{{ product.image }}" title="{{ product.name }}">
+			<div  class="status-cart" ng-repeat="product in cart track by $index ">
+				<img ng-src="Images/{{product.image_path}}" alt="">
 				<div>
-					{{quantety}}
-					<strong ng-bind="product.name">Name: {{ product.name }}</strong><br>
-					<strong>Price: {{ product.price | currency }}</strong>
+					<p class="quantety">Quantety x {{quantety}}</p>
+					<strong ng-bind="product.album_name">Name: {{ product.album_name }}</strong><br>
+					<strong>Price: {{ product.album_price  }}</strong>
 				</div>
 			</div>
 
-			<div>
+			<!-- <div>
 				<strong>Total: {{ total | currency }}</strong>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </aside>
