--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -3,7 +3,8 @@
 <main ng-controller="AlbumsGenreController" >	
 	<div id="wrapper">
 		<genre-list> daniel </genre-list>
-	    <bread-crumb></bread-crumb>
+		<div ncy-breadcrumb></div>
+	   <!--  <bread-crumb></bread-crumb> -->
 		<div id="center-albums">
 			<div class="genre-amount">
 				<p>{{genreName }} ({{genreLength + " items"}})</p>
