--- a/index1.html
+++ b/index1.html
@@ -35,7 +35,9 @@
                 </div>
 			</div>
 
-			<div id="store-status"></div>
+			<div id="bascet-status">
+				<a  ng-href="#check-out"><img  ng-src="Images/bascet.png" ></a>
+			</div>
 		</div>
 	</header>
 
@@ -49,7 +51,13 @@
 	<script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 	<script src="bower_components/angular/angular.validator.js"></script>
     <script src="bower_components/ng-breadcrumbs.min.js"></script>
+	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="bower_components/angular-ui-router-breadcrumbs/dist/angular-ui-router-breadcrumbs.min.js"></script>
+	<script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+	
+
 	<!--<script src="app/angular-filter.js"></script>-->	
+
 
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
