--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -2,6 +2,7 @@
 <main ng-controller = "SelectedAlbumController" ng-init="loadAlbum()">
 	<div id="wrapper">	
 		<bread-crumb></bread-crumb>
+		<div ncy-breadcrumb></div>
 		<genre-list> daniel </genre-list>
 		<my-cart> kira </my-cart>
 
