--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -3,8 +3,8 @@
 	<div id="wrapper">	
 		<bread-crumb></bread-crumb>
 		<div ncy-breadcrumb></div>
-		<genre-list> daniel </genre-list>
-		<my-cart> kira </my-cart>
+		<genre-list></genre-list>
+		<my-cart></my-cart>
 
 		<div id="view-album">	    
 		    
