--- a/index1.html
+++ b/index1.html
@@ -46,6 +46,7 @@
 <!-- <footer></footer> -->
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/lodash/lodash.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
@@ -55,13 +56,16 @@
 	<script src="bower_components/angular-ui-router-breadcrumbs/dist/angular-ui-router-breadcrumbs.min.js"></script>
 	<script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 	
+	
+
 
 	<!--<script src="app/angular-filter.js"></script>-->	
 
 
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
-	<script src="app/Search/LiveSearch.js"></script>
+	
+	<script src="app/Search/SearchFactory.js"></script>
 	<script src="app/Search/SearchController.js"></script>
 
     <script src="app/User/UserFactory.js"></script>
