--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -3,8 +3,8 @@
 	<div id="wrapper">
     <div ncy-breadcrumb></div>
 	<bread-crumb></bread-crumb>
-	<genre-list> daniel </genre-list>
-	<!-- <my-cart> kira </my-cart>	 -->
+	<genre-list></genre-list>
+	<!-- <my-cart></my-cart>	 -->
 	
 	<div id ="center-albums">
 		<div class="center albums" ng-repeat="album in albums | limitTo :12 :11 track by $index" >
@@ -14,7 +14,7 @@
 				<p class="album-price">{{album.album_price | currency:"$"}}</p>
 				<div class="album-manage-icon">
 		    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart($index)">
+		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
 		    	</div>
 		    </div>
 		</div>
@@ -28,7 +28,7 @@
 		    	<p class="album-price">{{album.album_price | currency:"$"}}</p>
 				<div class="album-manage-icon">
 		    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart($index)">
+		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
 		    	</div>
 		    </div>
 		</div>
@@ -44,7 +44,7 @@
 		            <p class="album-price">{{album.album_price | currency:"$"}}</p>
 					<div class="album-manage-icon">
 			    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-			    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart($index)">
+			    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
 			    	</div>
 		        </div>
 		    </div>
