--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -5,7 +5,7 @@
 		<div ncy-breadcrumb></div>
 		<genre-list></genre-list>
 		<my-cart></my-cart>
-
+        {{loadCount()}}
 		<div id="view-album">	    
 		    
 		    <img ng-src="Images/{{album.image_path}}" alt="">
@@ -41,7 +41,8 @@
 				</div>
 			</div>
 		</div>
+	 <footer ></footer>
 	</div>
 </main>
-	<!-- <div class="blank"></div>
-    <footer ng-class="{expression}"></footer> -->
+	<!-- <div class="blank"></div> -->
+   
