--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -4,8 +4,8 @@
     <div ncy-breadcrumb></div>
 	<bread-crumb></bread-crumb>
 	<genre-list></genre-list>
-	<!-- <my-cart></my-cart>	 -->
 	
+    {{loadCount()}}
 	<div id ="center-albums">
 		<div class="center albums" ng-repeat="album in albums | limitTo :12 :11 track by $index" >
 			<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
@@ -26,12 +26,13 @@
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name}}</p>
 		    	<p class="album-price">{{album.album_price | currency:"$"}}</p>
-				<div class="album-manage-icon">
-		    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-		    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
+				<div class="album-manage-icon" >
+		    		<img ng-src="Images/info-album.png" alt="info" ng-click="setImage(img)">
+		    	    <img ng-src="Images/bascet-album.png" alt="basket" ng-class="{buy:buy}" ng-click="addToCart(album.album_id) ">
 		    	</div>
 		    </div>
 		</div>
+		 <my-cart></my-cart>
 	</div>
 
 	<div infinite-scroll="loadMore()" infinite-scroll-disabled='busy' infinite-scroll-distance='3'>
